courses descriptions and years

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><?xml-stylesheet href="treestyles.css" type="text/css"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!--This file has been created with toxhtml.xsl--><head><meta content="text/html; charset=UTF-8" http-equiv="Content-Type" /><title>Krzysztof Strug
-extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//treestyles.css" type="text/css" /><script type="text/javascript" src="STRG_extendedCV.html_files//marktree.js"> 
+An extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//treestyles.css" type="text/css" /><script type="text/javascript" src="STRG_extendedCV.html_files//marktree.js"> 
 	</script></head><body><div class="basetop"><a onclick="expandAll(document.getElementById('base'))" href="#">Expand</a> -
 <a onclick="collapseAll(document.getElementById('base'))" href="#">Collapse</a></div><div class="basetext" id="base"><ul>
-	<li class="col" id="FMID_754292294FM"><div class="boxed"><div class="nodecontent" style="font-size:133%;">Krzysztof Strug<br />extended CV</div><div class="note-and-attributes"><span class="note"><p>
+	<li class="col" id="FMID_754292294FM"><div class="boxed"><div class="nodecontent" style="font-size:133%;">Krzysztof Strug<br />An extended CV</div><div class="note-and-attributes"><span class="note"><p>
       This is extended version of CV, not intended to be read in full. The goal is to provide more insight to points mentioned briefly in the regular CV that reader found intriguing.
     </p></span></div></div>
 		<ul class="subexp">
@@ -564,15 +564,60 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 		<ul class="sub">
 	<li class="exp" id="FMID_1141409201FM"><div class="nodecontent">Finished:</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_1219118370FM"><div class="nodecontent">Introduction to Computational Thinking and Data Science </div></li>
-	<li class="basic" id="FMID_415491065FM"><div class="nodecontent">Computer Science and Programming</div></li>
-	<li class="basic" id="FMID_217044665FM"><div class="nodecontent">Model Thinking</div></li>
-	<li class="basic" id="FMID_207403191FM"><div class="nodecontent">Global Warming Science</div></li>
-	<li class="basic" id="FMID_1233787325FM"><div class="nodecontent">Analytics Edge</div></li>
-	<li class="basic" id="FMID_1470078404FM"><div class="nodecontent">Global Poverty Challenges</div></li>
-	<li class="basic" id="FMID_1935928864FM"><div class="nodecontent">New Generation Infrastructures</div></li>
-	<li class="basic" id="FMID_281637878FM"><div class="nodecontent">Introduction to Graphene Science and Technology</div></li>
-	<li class="basic" id="FMID_1142572087FM"><div class="nodecontent"> Principles of Project Management </div></li></ul></li>
+	<li class="col" id="FMID_1219118370FM"><div class="nodecontent">Introduction to Computational Thinking and Data Science </div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_840557406FM"><div class="nodecontent">MITx 6.00.1x</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1863659073FM"><div class="nodecontent">This course is the first of a two-course sequence: Introduction to Computer Science and Programming Using Python, and Introduction to Computational Thinking and Data Science. Together, they are designed to help people with no prior exposure to computer science or programming learn to think computationally and write programs to tackle useful problems. Some of the people taking the two courses will use them as a stepping stone to more advanced computer science courses, but for many it will be their first and last computer science courses.</div></li></ul></li>
+	<li class="basic" id="FMID_1213839287FM"><div class="nodecontent">2013</div></li></ul></li>
+	<li class="col" id="FMID_415491065FM"><div class="nodecontent">Computer Science and Programming</div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_1808552496FM"><div class="nodecontent">MITx 6.00.2x</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1121301055FM"><div class="nodecontent">6.00.2x will teach you how to use computation to accomplish a variety of goals and provides you with a brief introduction to a variety of topics in computational problem solving . This course is aimed at students with some prior programming experience in Python and a rudimentary knowledge of computational complexity. You will spend a considerable amount of time writing programs to implement the concepts covered in the course. For example, you will write a program that will simulate a robot vacuum cleaning a room or will model the population dynamics of viruses replicating and drug treatments in a patient's body</div></li></ul></li>
+	<li class="basic" id="FMID_429853171FM"><div class="nodecontent">2014</div></li></ul></li>
+	<li class="col" id="FMID_217044665FM"><div class="nodecontent">Model Thinking</div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_1692134856FM"><div class="nodecontent">UMichigan</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1199261101FM"><div class="nodecontent">This course provided an introduction on how to think using models. Specific topics included, among others, decision-making, tipping points, economic models, crowd dynamics, Markov processes, game theory and predictive thinking.</div></li></ul></li>
+	<li class="basic" id="FMID_1113212552FM"><div class="nodecontent">2014</div></li></ul></li>
+	<li class="col" id="FMID_207403191FM"><div class="nodecontent">Global Warming Science</div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_1261498205FM"><div class="nodecontent">MITx 12.340x</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_540550883FM"><div class="nodecontent">12.340x introduces the basic science underpinning our knowledge of the climate system, how climate has changed in the past, and how it may change in the future. The course focuses on the fundamental energy balance in the climate system, between incoming solar radiation and outgoing infrared radiation, and how this balance is affected by greenhouse gases. We will also discuss physical processes that shape the climate, such as atmospheric and oceanic convection and large-scale circulation, solar variability, orbital mechanics, and aerosols, as well as the evidence for past and present climate change. We will discuss climate models of varying degrees of complexity, and you will be able to run a model of a single column of the Earth's atmosphere, which includes many of the important elements of simulating climate change. Together, this range of topics forms the scientific basis for our understanding of anthropogenic (human-influenced) climate change.</div></li></ul></li>
+	<li class="basic" id="FMID_1489512400FM"><div class="nodecontent">2014</div></li></ul></li>
+	<li class="col" id="FMID_1233787325FM"><div class="nodecontent">Analytics Edge</div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_180312151FM"><div class="nodecontent">MITx 15.071x</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_690242147FM"><div class="nodecontent"> In this course, you will learn how to use data and analytics to give an edge to your career and your life. We will examine real world examples of how analytics have been used to significantly improve a business or industry. These examples include Moneyball, eHarmony, the Framingham Heart Study, Twitter, IBM Watson, and Netflix. Through these examples and many more, we will teach you the following analytics methods: linear regression, logistic regression, trees, text analytics, clustering, visualization, and optimization. We will be using the statistical software R to build models and work with data. The contents of this course are essentially the same as those of the corresponding MIT class (The Analytics Edge). It is a challenging class, but it will enable you to apply analytics to real-world applications. </div></li></ul></li>
+	<li class="basic" id="FMID_1826320930FM"><div class="nodecontent">2014</div></li></ul></li>
+	<li class="col" id="FMID_1470078404FM"><div class="nodecontent">Global Poverty Challenges</div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_219468421FM"><div class="nodecontent">MITx 14.73x</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_420431984FM"><div class="nodecontent">This is a course for those who are interested in the challenge posed by massive and persistent world poverty, and are hopeful that economists might have something useful to say about this challenge. The questions we will take up include: Is extreme poverty a thing of the past? What is economic life like when living under a dollar per day? Are the poor always hungry? How do we make schools work for poor citizens? How do we deal with the disease burden? Is microfinance invaluable or overrated? Without property rights, is life destined to be "nasty, brutish and short"? Should we leave economic development to the market? Should we leave economic development to non-governmental organizations (NGOs)? Does foreign aid help or hinder? Where is the best place to intervene? And many others.</div></li></ul></li>
+	<li class="basic" id="FMID_1652308048FM"><div class="nodecontent">2014</div></li></ul></li>
+	<li class="col" id="FMID_281637878FM"><div class="nodecontent">Introduction to Graphene Science and Technology</div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_915797059FM"><div class="nodecontent">ChalmersX ChM001x</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1933372797FM"><div class="nodecontent">Explain how to perform graphene material synthesis experiments    <br />Assess if and how graphene can be used in different electronic products to improve, enhance or add new properties     <br />Comprehend scientific articles on graphene research     <br />Identify existing and new areas of graphene application and evaluate its potential     <br />Evaluate whether or not graphene can contribute to your career advancement – be it in academia or industry  </div></li></ul></li>
+	<li class="basic" id="FMID_665177780FM"><div class="nodecontent">2015</div></li></ul></li>
+	<li class="col" id="FMID_1142572087FM"><div class="nodecontent"> Principles of Project Management </div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_362087855FM"><div class="nodecontent">Polytechnic West</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1181696910FM"><div class="nodecontent">    What a project is, and how you can manage it, including:         An overview of popular Project Management methodologies and standards         The project life cycle: Concept, Develop, Execute and Finish         Nine areas every project manager should know         The main constraints projects often encounter         The benefits of Project Management     What is involved in the concept phase, including:         Key project roles, like the project manager, team and stakeholder         Setting and justifying your goals     What is involved in the development phase, including:         The project management plan         Planning for change     How to monitor and control the execution of a project, including:         Quality auditing and continuous improvement         Getting handover right and how to use the lessons learned </div></li></ul></li>
+	<li class="basic" id="FMID_1533819060FM"><div class="nodecontent">2015</div></li></ul></li>
+	<li class="col" id="FMID_1255838655FM"><div class="nodecontent">Software Processes and Agile Practices</div>
+		<ul class="subexp">
+	<li class="exp" id="FMID_1137344940FM"><div class="nodecontent">UAlberta</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_798923909FM"><div class="nodecontent">This course delves into a variety of processes to structure software development. It also covers the foundations of core Agile practices, such as Extreme Programming and Scrum.</div></li></ul></li>
+	<li class="basic" id="FMID_362883010FM"><div class="nodecontent">2015</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_1018594714FM"><div class="nodecontent">Unfinished:</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1387495067FM"><div class="nodecontent">Financial Programming and Policies, Part 1: Macroeconomic Accounts &amp; Analysis</div></li>
@@ -588,7 +633,10 @@ extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//tree
 	<li class="basic" id="FMID_126119930FM"><div class="nodecontent">High Performance Scientific Computing</div></li>
 	<li class="basic" id="FMID_740115677FM"><div class="nodecontent">Introduction to Physical Chemistry</div></li>
 	<li class="basic" id="FMID_973052383FM"><div class="nodecontent">Introduction to Data Science</div></li>
-	<li class="basic" id="FMID_1255838655FM"><div class="nodecontent">Software Processes and Agile Practices</div></li></ul></li>
+	<li class="basic" id="FMID_1888562924FM"><div class="nodecontent">Foundations of Development Policy</div></li>
+	<li class="col" id="FMID_1935928864FM"><div class="nodecontent">New Generation Infrastructures</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_1525278393FM"><div class="nodecontent">DelftX NGI101x</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_900181253FM"><div class="nodecontent">Planned:</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_349263206FM"><div class="nodecontent">many more</div></li></ul></li></ul></li>
