--- a/index.html
+++ b/index.html
@@ -402,6 +402,21 @@ An extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//t
 	<li class="basic" id="FMID_1005636394FM"><div class="nodecontent">expert algorithms</div></li></ul></li></ul></li></ul></li>
 	<li class="col" style="background-color:#ffcc99;" id="FMID_1178879224FM"><div class="nodecontent">Employment</div>
 		<ul class="subexp">
+	<li class="col" id="FMID_1464577490FM"><div class="nodecontent">Ramboll</div>
+		<ul class="subexp">
+	<li class="basic" id="FMID_119796260FM"><div class="nodecontent">2016-2017</div></li>
+	<li class="basic" id="FMID_577769152FM"><div class="nodecontent">Senior Consultant</div></li>
+	<li class="basic" id="FMID_1320081368FM"><div class="nodecontent">Warsaw / Copenhagen / Newcastle, PL/DK/UK</div></li>
+	<li class="basic" id="FMID_686000607FM"><div class="nodecontent"><a href="http://www.ramboll.com/services-and-sectors/energy">link</a> <a href="http://www.ramboll.com/services-and-sectors/energy"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
+	<li class="exp" id="FMID_1090893627FM"><div class="nodecontent">summary</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_1539770326FM"><div class="nodecontent">Technical consulting; energy technology advisory; feasibility studies; due dilligence; tenders technical assesment;</div></li></ul></li>
+	<li class="exp" id="FMID_1802216228FM"><div class="nodecontent">about organization</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_773371946FM"><div class="nodecontent">Ramboll is engineering and consulting copmany, headquartered in Copnehagen, DK. It employs over 14 000 people advising in infrastracture related areas like: buildings, trasnport and energy. Ramboll aims at bringing scandinavian standard and quality of living, as well as values to the world.</div></li></ul></li>
+	<li class="exp" id="FMID_1713350795FM"><div class="nodecontent">my role</div>
+		<ul class="sub">
+	<li class="basic" id="FMID_693129179FM"><div class="nodecontent">As a Senior Consultant I have contacted clients at all levels while leading teh process of writing technical reports and conducting needed research. Clients included power utilities, industrial plants and factories. My areas of expertise  included boiler techonologies, flue gas cleaning, gasifier systems, ORC modules.</div></li></ul></li></ul></li>
 	<li class="exp" id="FMID_779092306FM"><div class="nodecontent">Centre for Industrial Applications of Mathematics <br />and Systems Engineering, <br />Polish Academy of Sciences (CIAMSE PAS)</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_1058077561FM"><div class="nodecontent">2014-2015</div></li>
@@ -410,7 +425,7 @@ An extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//t
 	<li class="basic" id="FMID_1937236026FM"><div class="nodecontent"><a href="http://maths.com.pl/?q=english">link</a> <a href="http://maths.com.pl/?q=english"><img src="STRG_extendedCV.html_files//ilink.png" alt="User Link" style="border-width:0" /></a></div></li>
 	<li class="exp" id="FMID_792106149FM"><div class="nodecontent">summary:</div>
 		<ul class="sub">
-	<li class="basic" id="FMID_494693758FM"><div class="nodecontent">Technical consulting; Research in systems modelling; machine learning data semantics; project management and coordination; leader of projects focused on disruptive technologies.</div></li></ul></li>
+	<li class="basic" id="FMID_494693758FM"><div class="nodecontent">Technical consulting; research in systems modelling; machine learning data semantics; project management and coordination; leader of projects focused on disruptive technologies.</div></li></ul></li>
 	<li class="exp" id="FMID_1728405576FM"><div class="nodecontent">about organization:</div>
 		<ul class="sub">
 	<li class="basic" id="FMID_339106514FM"><div class="nodecontent">the Centre is a joint initiative of two institutes of Polish Academy of Sciences: Systems Research Institute and Institute of Mathematics. Created by dr Kamil Kulesza after his Cambridge postdoc and based on idea of ESGI (European Study Groups for Industry) - diverse groups of mathematical minds tackling real industry problems. Centre works with industry, performing research projects for various companies from all sectors of economy.</div></li></ul></li>
@@ -626,11 +641,11 @@ An extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//t
 	<li class="basic" id="FMID_1921410446FM"><div class="nodecontent">The Science of Everyday Thinking</div></li>
 	<li class="basic" id="FMID_1810528190FM"><div class="nodecontent">Framing: Creating powerful political messages</div></li>
 	<li class="basic" id="FMID_1605803895FM"><div class="nodecontent">Learn HTML5 from W3C</div></li>
-	<li class="basic" id="FMID_297818640FM"><div class="nodecontent">Introduction to Big Data with Apache Spark</div></li>
+	<li class="basic" id="FMID_297818640FM"><div class="nodecontent">Introduction to Big Data with Apache Spark (BerkeleyX)</div></li>
 	<li class="basic" id="FMID_1270235095FM"><div class="nodecontent">Creative Problem Solving and Decision Making</div></li>
 	<li class="basic" id="FMID_1548773511FM"><div class="nodecontent">Machine Learning</div></li>
 	<li class="basic" id="FMID_145282350FM"><div class="nodecontent">How Green Is That Product? An Introduction to Life Cycle Environmental Assessment</div></li>
-	<li class="basic" id="FMID_126119930FM"><div class="nodecontent">High Performance Scientific Computing</div></li>
+	<li class="basic" id="FMID_126119930FM"><div class="nodecontent">High Performance Scientific Computing (UoWashington)</div></li>
 	<li class="basic" id="FMID_740115677FM"><div class="nodecontent">Introduction to Physical Chemistry</div></li>
 	<li class="basic" id="FMID_973052383FM"><div class="nodecontent">Introduction to Data Science</div></li>
 	<li class="basic" id="FMID_1888562924FM"><div class="nodecontent">Foundations of Development Policy</div></li>
@@ -821,6 +836,7 @@ An extended CV</title><link rel="stylesheet" href="STRG_extendedCV.html_files//t
 		<ul class="sub">
 	<li class="basic" id="FMID_1733646525FM"><div class="nodecontent">Presentation</div></li>
 	<li class="basic" id="FMID_1064189565FM"><div class="nodecontent">Example agroenergy thermodynamic cycles</div></li>
+	<li class="basic" id="FMID_270427036FM"><div class="nodecontent">Gdansk, Institute of Flow Machinery</div></li></ul></li></ul></li></ul></li></ul></div></body>
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 //<![CDATA[
