improved some formatting

--- a/index.html
+++ b/index.html
@@ -150,18 +150,18 @@ function unfold_document() {
     </p>
   <ul>
 <li><div style="background-color:#ffcc99;padding: 0.5em;">
-Employment history<ul>
-<li>Anthesis<ul>
+<span style="font-weight: bold; ">Employment history</span><ul>
+<li><span style="font-weight: bold; ">Anthesis</span><ul>
 <li>2022 - now</li><li>Senior Analyst</li><li>remote / London / Bristol</li><li><a href="https://www.anthesisgroup.com/energy-services/" target="_blank">link</a>
 </li><li>summary<ul>
 <li>Overseeing analytical work on techno-economic analysis, energy modeling, data processing and net-zero advice.</li></ul>
 </li></ul>
-</li><li>Siemens<ul>
+</li><li><span style="font-weight: bold; ">Siemens</span><ul>
 <li>2021 - 2022</li><li>Senior Consultant</li><li>remote / Manchester</li><li><a href="https://new.siemens.com/global/en/products/energy/energy-automation-and-smart-grid/energy-business-advisory.html" target="_blank">link</a>
 </li><li>summary<ul>
 <li>Net-zero and smart campus/city consulting.</li></ul>
 </li></ul>
-</li><li>ICF<ul>
+</li><li><span style="font-weight: bold; ">ICF</span><ul>
 <li>2018 - 2021</li><li>Senior Consultant</li><li>London</li><li><a href="https://www.icf.com/company/locations/european-region" target="_blank">link</a>
 </li><li>summary<ul>
 <li>Policy research and advise. Technical reviews of technologies and market assessments. Data anaysis and report writing in techno-economic evaluations of investments Technical assistance for countries and European Commission;</li></ul>
@@ -172,7 +172,7 @@ about the organization<ul id="fold1_1" style="POSITION: relative; VISIBILITY: vi
 my role<ul id="fold1_2" style="POSITION: relative; VISIBILITY: visible;">
 <li>As a Consultant I have contacted clients at all levels while leading process of writing technical reports and conducting needed research. My clients include BEIS, European Commission, national agencies. My areas of expertise were focused on, but not limited to: boiler techonologies, heat pumps, ORC modules, CCUS, industrial heat recovery and power generation.</li></ul>
 </li></ul>
-</li><li>Ramboll<ul>
+</li><li><span style="font-weight: bold; ">Ramboll</span><ul>
 <li>2016-2018</li><li>Consultant</li><li>Warsaw / Copenhagen / Newcastle, PL/DK/UK</li><li><a href="http://www.ramboll.com/services-and-sectors/energy" target="_blank">link</a>
 </li><li>summary<ul>
 <li>Data anaysis and report writing in techno-economic evaluations of investments and maintenance programmes; energy technology advisory; feasibility studies; due dilligence; tenders technical assesment;</li></ul>
@@ -184,7 +184,7 @@ my role<ul id="fold1_4" style="POSITION: relative; VISIBILITY: visible;">
 <li>As a Consultant I have contacted clients at all levels while leading process of writing technical reports and conducting needed research. My clients included power utilities, industrial plants and factories. My areas of expertise were focused on, but not limited to: boiler techonologies, flue gas cleaning, gasifier systems, ORC modules, maintenance programme analysis and forecasts, risk identification and assessment.</li></ul>
 </li></ul>
 </li><li><span id="show1_5" class="foldclosed" onClick="show_folder('1_5')" style="POSITION: absolute">+</span> <span id="hide1_5" class="foldopened" onClick="hide_folder('1_5')">-</span>
-Centre for Industrial Applications of Mathematics &#10;and Systems Engineering, &#10;Polish Academy of Sciences (CIAMSE PAS)<ul id="fold1_5" style="POSITION: relative; VISIBILITY: visible;">
+<span style="font-weight: bold; ">Centre for Industrial Applications of Mathematics &#10;and Systems Engineering, &#10;Polish Academy of Sciences (CIAMSE PAS)</span><ul id="fold1_5" style="POSITION: relative; VISIBILITY: visible;">
 <li>2014-2015</li><li>Senior Researcher</li><li>Warsaw / Cambridge, PL/UK</li><li><a href="http://maths.com.pl/?q=english" target="_blank">link</a>
 </li><li><span id="show1_5_1" class="foldclosed" onClick="show_folder('1_5_1')" style="POSITION: absolute">+</span> <span id="hide1_5_1" class="foldopened" onClick="hide_folder('1_5_1')">-</span>
 summary:<ul id="fold1_5_1" style="POSITION: relative; VISIBILITY: visible;">
@@ -197,7 +197,7 @@ my role:<ul id="fold1_5_3" style="POSITION: relative; VISIBILITY: visible;">
 <li>As a Senior Researcher I have led projects in areas of technology. I managed technology development monitoring and technology niches discovery process. I co-organized summer data science workshops (a part of financial data mining). I have participated in creation of semantic knowledge representation systems (taxonomies, ontologies).</li></ul>
 </li></ul>
 </li><li><span id="show1_6" class="foldclosed" onClick="show_folder('1_6')" style="POSITION: absolute">+</span> <span id="hide1_6" class="foldopened" onClick="hide_folder('1_6')">-</span>
-Energy Center of the Netherlands (ECN)<ul id="fold1_6" style="POSITION: relative; VISIBILITY: visible;">
+<span style="font-weight: bold; ">Energy Center of the Netherlands (ECN)</span><ul id="fold1_6" style="POSITION: relative; VISIBILITY: visible;">
 <li>April-August 2013</li><li>Visiting Researcher</li><li>Petten / Alkmaar, NL</li><li><a href="https://www.ecn.nl/" target="_blank">link</a>
 </li><li><span id="show1_6_1" class="foldclosed" onClick="show_folder('1_6_1')" style="POSITION: absolute">+</span> <span id="hide1_6_1" class="foldopened" onClick="hide_folder('1_6_1')">-</span>
 summary<ul id="fold1_6_1" style="POSITION: relative; VISIBILITY: visible;">
@@ -210,7 +210,7 @@ my role:<ul id="fold1_6_3" style="POSITION: relative; VISIBILITY: visible;">
 <li>As a visiting Researcher my main task was to deliver objectives of one of CATO2 project tasks, that  was techno-economic analysis of biomass co-firing power plant combined with CCS (Carbon Capture and Storage).</li></ul>
 </li></ul>
 </li><li><span id="show1_7" class="foldclosed" onClick="show_folder('1_7')" style="POSITION: absolute">+</span> <span id="hide1_7" class="foldopened" onClick="hide_folder('1_7')">-</span>
-Institute of Power Engineering (IEn)<ul id="fold1_7" style="POSITION: relative; VISIBILITY: visible;">
+<span style="font-weight: bold; ">Institute of Power Engineering (IEn)</span><ul id="fold1_7" style="POSITION: relative; VISIBILITY: visible;">
 <li>2007-2014</li><li>Thermal Processes Department</li><li>Engineer</li><li>Warsaw, PL</li><li><a href="https://ien.com.pl/cpc-thermal-processing-department" target="_blank">link</a>
 </li><li><span id="show1_7_1" class="foldclosed" onClick="show_folder('1_7_1')" style="POSITION: absolute">+</span> <span id="hide1_7_1" class="foldopened" onClick="hide_folder('1_7_1')">-</span>
 summary<ul id="fold1_7_1" style="POSITION: relative; VISIBILITY: visible;">
@@ -223,7 +223,7 @@ my role:<ul id="fold1_7_3" style="POSITION: relative; VISIBILITY: visible;">
 <li>I have been recruited as an engineer for fuel cells systems development (auxiliaries, heat exchange optimization). Due to slow development of core fuel cell technology I started to take part in many consulting projects for power plants, including fuel gas treatment, fuel flexibility. Because of intense commitment to those consulting tasks I have been formally assigned to Combustion Team, but I have been an interconnector between the teams and a person dealing with subjects not being the core competence of the department. One of the most important projects was starting development of new line of interest in the department: biomass fired mini CHP (Combined Heat and Power).</li></ul>
 </li></ul>
 </li><li><span id="show1_8" class="foldclosed" onClick="show_folder('1_8')" style="POSITION: absolute">+</span> <span id="hide1_8" class="foldopened" onClick="hide_folder('1_8')">-</span>
-Polska Ekologia (poleko)<ul id="fold1_8" style="POSITION: relative; VISIBILITY: visible;">
+<span style="font-weight: bold; ">Polska Ekologia (poleko)</span><ul id="fold1_8" style="POSITION: relative; VISIBILITY: visible;">
 <li>2006-2007</li><li>solar energy  & heat pumps</li><li>Technical Adviser</li><li><a href="http://poleko.pl/" target="_blank">link</a>
 </li><li><span id="show1_8_1" class="foldclosed" onClick="show_folder('1_8_1')" style="POSITION: absolute">+</span> <span id="hide1_8_1" class="foldopened" onClick="hide_folder('1_8_1')">-</span>
 summary<ul id="fold1_8_1" style="POSITION: relative; VISIBILITY: visible;">
@@ -274,8 +274,8 @@ Software Carpentry<ul id="fold1_9_6" style="POSITION: relative; VISIBILITY: visi
 </li></ul>
 </div>
 </li><li><div style="background-color:#ff99ff;padding: 0.5em;">
-Education<ul>
-<li>BEng<ul>
+<span style="font-weight: bold; ">Education</span><ul>
+<li><span style="font-weight: bold; ">BEng</span><ul>
 <li><span id="show1_10" class="foldclosed" onClick="show_folder('1_10')" style="POSITION: absolute">+</span> <span id="hide1_10" class="foldopened" onClick="hide_folder('1_10')">-</span>
 Mechanical Engineering / Renewable Energy Technologies<ul id="fold1_10" style="POSITION: relative; VISIBILITY: visible;">
 <li>Warsaw University of Technology;</li><li>Power and Aeronautical Engineering Faculty</li><li>2001-2005</li><li><span id="show1_10_1" class="foldclosed" onClick="show_folder('1_10_1')" style="POSITION: absolute">+</span> <span id="hide1_10_1" class="foldopened" onClick="hide_folder('1_10_1')">-</span>
@@ -283,7 +283,7 @@ Summary<ul id="fold1_10_1" style="POSITION: relative; VISIBILITY: visible;">
 <li>Mechanical (classical, solid state, fluid and thermodynamic) and electrical focused courses with atmosphere and sun physics and hydrology basics followed by technology projects including solar and wind but also nuclear technology.</li></ul>
 </li></ul>
 </li></ul>
-</li><li>MSc<ul>
+</li><li><span style="font-weight: bold; ">MSc</span><ul>
 <li><span id="show1_11" class="foldclosed" onClick="show_folder('1_11')" style="POSITION: absolute">+</span> <span id="hide1_11" class="foldopened" onClick="hide_folder('1_11')">-</span>
 Environmental  Engineering / Environmental Problems of Thermal Power Plants<ul id="fold1_11" style="POSITION: relative; VISIBILITY: visible;">
 <li>Warsaw University of Technology;</li><li>Power and Aeronautical Engineering Faculty</li><li>2005-2007</li><li><span id="show1_11_1" class="foldclosed" onClick="show_folder('1_11_1')" style="POSITION: absolute">+</span> <span id="hide1_11_1" class="foldopened" onClick="hide_folder('1_11_1')">-</span>
@@ -291,7 +291,7 @@ Summary:<ul id="fold1_11_1" style="POSITION: relative; VISIBILITY: visible;">
 <li>Chemistry and thermodynamics focused courses with special insight to fuel characterization, energy policies, systems engineering. Some of the technologies covered boilers, turbines, pumps, engines, fuel cells etc.</li></ul>
 </li></ul>
 </li></ul>
-</li><li>post-graduate<ul>
+</li><li><span style="font-weight: bold; ">post-graduate</span><ul>
 <li><span id="show1_12" class="foldclosed" onClick="show_folder('1_12')" style="POSITION: absolute">+</span> <span id="hide1_12" class="foldopened" onClick="hide_folder('1_12')">-</span>
 Psychology of Management<ul id="fold1_12" style="POSITION: relative; VISIBILITY: visible;">
 <li>University of Warsaw</li><li>Psychology Department</li><li>Two-semester studies</li><li>2013-2014</li><li><span id="show1_12_1" class="foldclosed" onClick="show_folder('1_12_1')" style="POSITION: absolute">+</span> <span id="hide1_12_1" class="foldopened" onClick="hide_folder('1_12_1')">-</span>
@@ -385,7 +385,7 @@ Schools<ul id="fold1_15" style="POSITION: relative; VISIBILITY: visible;">
 </li></ul>
 </div>
 </li><li><div style="background-color:#ffff99;padding: 0.5em;">
-Skills<ul>
+<span style="font-weight: bold; ">Skills</span><ul>
 <li><span id="show1_16" class="foldclosed" onClick="show_folder('1_16')" style="POSITION: absolute">+</span> <span id="hide1_16" class="foldopened" onClick="hide_folder('1_16')">-</span>
 Languages<ul id="fold1_16" style="POSITION: relative; VISIBILITY: visible;">
 <li>Polish<ul>
@@ -478,7 +478,7 @@ Music<ul id="fold1_19" style="POSITION: relative; VISIBILITY: visible;">
 </li></ul>
 </div>
 </li><li><div style="background-color:#ff9999;padding: 0.5em;">
-Events<ul>
+<span style="font-weight: bold; ">Events</span><ul>
 <li><span id="show1_20" class="foldclosed" onClick="show_folder('1_20')" style="POSITION: absolute">+</span> <span id="hide1_20" class="foldopened" onClick="hide_folder('1_20')">-</span>
 DataCarpentry 2015<ul id="fold1_20" style="POSITION: relative; VISIBILITY: visible;">
 <li>secondary instructor at Data Carpentry workshops for Cambridge University phd students and post-docs</li><li><a href="https://lgatto.github.io/2015-09-10-CAM/" target="_blank">workshop website</a>
@@ -521,7 +521,7 @@ Ecoenergy Network 2008<ul id="fold1_28" style="POSITION: relative; VISIBILITY: v
 </li></ul>
 </div>
 </li><li><div style="background-color:#f0f0f0;padding: 0.5em;">
-Personal Info<ul>
+<span style="font-weight: bold; ">Personal Info</span><ul>
 <li><span id="show1_29" class="foldclosed" onClick="show_folder('1_29')" style="POSITION: absolute">+</span> <span id="hide1_29" class="foldopened" onClick="hide_folder('1_29')">-</span>
 Contact<ul id="fold1_29" style="POSITION: relative; VISIBILITY: visible;">
 <li>e-mail<ul>
@@ -540,17 +540,17 @@ in Gdynia<ul id="fold1_30_1" style="POSITION: relative; VISIBILITY: visible;">
 Curent place of residence<ul id="fold1_31" style="POSITION: relative; VISIBILITY: visible;">
 <li>Cambridge, UK</li></ul>
 </li><li>Social media<ul>
-<li><a href="https://mastodon.green/@strugk" target="_blank">mastodon</a>
+<li><a href="https://www.linkedin.com/in/strugk" target="_blank">LinkedIn</a>
+</li><li><a href="https://mastodon.green/@strugk" target="_blank">mastodon</a>
 <ul>
 <li><a rel="me" href="https://mastodon.green/@strugk">Mastodon</a></li></ul>
 </li><li><a href="https://strugk.newsblur.com/" target="_blank">Newsblur</a>
-</li><li><a href="https://www.linkedin.com/in/strugk" target="_blank">LinkedIn</a>
 </li><li><a href="https://app.thestorygraph.com/profile/strugk" target="_blank">the Story Graph</a>
 </li></ul>
 </li></ul>
 </div>
 </li><li><div style="background-color:#9999ff;padding: 0.5em;">
-Experience<ul>
+<span style="font-weight: bold; ">Experience</span><ul>
 <li><div style="background-color:#f0f0f0;padding: 0.5em;">
 Consulting<ul>
 <li><span id="show1_32" class="foldclosed" onClick="show_folder('1_32')" style="POSITION: absolute">+</span> <span id="hide1_32" class="foldopened" onClick="hide_folder('1_32')">-</span>
@@ -689,7 +689,7 @@ machine learning<ul id="fold1_44" style="POSITION: relative; VISIBILITY: visible
 </li></ul>
 </div>
 </li><li><div style="background-color:#99ffcc;padding: 0.5em;">
-Interests<ul>
+<span style="font-weight: bold; ">Interests</span><ul>
 <li><div style="background-color:#f0f0f0;padding: 0.5em;">
 Technology<ul>
 <li><span id="show1_45" class="foldclosed" onClick="show_folder('1_45')" style="POSITION: absolute">+</span> <span id="hide1_45" class="foldopened" onClick="hide_folder('1_45')">-</span>
